[gd_scene load_steps=3 format=3 uid="uid://testbattle001"]

[ext_resource type="Script" path="res://src/systems/combat/BattleController.gd" id="1_battle"]
[ext_resource type="Script" path="res://scenes/battle/TestBattle.gd" id="2_test"]

[node name="TestBattle" type="Node2D"]
script = ExtResource("2_test")

[node name="BattleController" type="Node" parent="."]
script = ExtResource("1_battle")

[node name="TileGridContainer" type="Node2D" parent="."]

[node name="EntityContainer" type="Node2D" parent="."]

[node name="Crews" type="Node2D" parent="EntityContainer"]

[node name="Enemies" type="Node2D" parent="EntityContainer"]

[node name="Turrets" type="Node2D" parent="EntityContainer"]

[node name="Projectiles" type="Node2D" parent="EntityContainer"]

[node name="EffectsContainer" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 270)
zoom = Vector2(1.5, 1.5)

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="BattleHUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="UI/BattleHUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="WaveLabel" type="Label" parent="UI/BattleHUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Wave 1/5"

[node name="Spacer" type="Control" parent="UI/BattleHUD/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyCountLabel" type="Label" parent="UI/BattleHUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Enemies: 0"

[node name="BottomBar" type="HBoxContainer" parent="UI/BattleHUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="CrewPanel" type="HBoxContainer" parent="UI/BattleHUD/BottomBar"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Instructions" type="Label" parent="UI/BattleHUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -30.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "[LMB] Select | [RMB] Move/Attack | [Q] Skill | [Space] Pause"
horizontal_alignment = 1
